--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,9 @@ body {
     0 20px 1px -9px rgba(0, 0, 0, 0.15) !important;
   padding: 30px !important;
 }
+
+.bottomPositionForSpan {
+  position: absolute;
+  left: 10px;
+  top: 24px;
+}
